tests/success/padding.msh
"cat" "." 5 leftPad wl
"cat" "ab" 8 leftPad wl
"kittens" "." 3 leftPad wl
