tests/fail/padding_empty_pad.msh
"cat" "" 5 leftPad wl
